set(gamandua_src
	gamandua.c
	gamandua_callbacks.c
	)

INCLUDE(UsePkgConfig)

PKGCONFIG(gtk+-2.0 GTK2_INCLUDES GTK2_LIBDIR GTK2_LINKFLAGS GTK2_CFLAGS)


MESSAGE(STATUS "DEBUG: ${GTK2_INCLUDES} ${GTK2_LIBDIR} ${GTK2_LINKFLAGS} ${}")

INCLUDE_DIRECTORIES(${GTK2_INCLUDES} gamandua)
ADD_EXECUTABLE(gamandua ${gamandua_src})
SET_TARGET_PROPERTIES(gamandua PROPERTIES COMPILE_FLAGS "${GTK2_CFLAGS}")
TARGET_LINK_LIBRARIES(gamandua ${GTK2_LINKFLAGS} td_base td_core)

